# schg

./: README.md  pyproject.toml
schg/: __base.py  __dss.py  __init__.py  __parser.py  __schg.py
tests/: test_opendss.py  test_parser_dss.py  test_parser_file.py  test_schg.py
tests/13bus/: IEEE13Nodeckt.dss
tests/simple_dss/: master.dss
tests/simple_file/: master.schg
